2004-01-18  Dave Neary  <bolsh@gimp.org>
        * NEWS: Updated again.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12076 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-18  Dave Neary  <bolsh@gimp.org>
+
+	* NEWS: Updated again.
+
 2004-01-18  Michael Natterer  <mitch@gimp.org>
 
 	* app/vectors/gimpstroke.c
