2004-01-18  Michael Natterer  <mitch@gimp.org>
	* app/tools/gimpinktool.c (ink_set_paint_area): use
	gimp_drawable_bytes_with_alpha().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12078 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-18  Michael Natterer  <mitch@gimp.org>
+
+	* app/tools/gimpinktool.c (ink_set_paint_area): use
+	gimp_drawable_bytes_with_alpha().
+
 2004-01-18  Dave Neary  <bolsh@gimp.org>
 
 	* NEWS: Updated again.
