--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-18  DindinX  <david@dindinx.org>
+
+	* plug-ins/common/nova.c: fixed a stupid bug which could crashes with
+	non square images. Done some cleanup also.
+
 2004-01-18  Michael Natterer  <mitch@gimp.org>
 
 	* app/gui/resize-dialog.c: when scaling an indexed image/layer,
