2004-01-19  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpgradienteditor.[ch]: moved the first hint label
	to a line of its own. fixes bug #127673.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12082 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-19  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpgradienteditor.[ch]: moved the first hint label
+	to a line of its own. fixes bug #127673.
+
 2004-01-19  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimplevelstool.[ch]: code cleanup; draw in the
