2004-01-19  Pedro Gimeno  <pggimeno@wanadoo.es>
	* plug-ins/common/compose.c (compose)
	* plug-ins/common/decompose.c (decompose): fixed a lack of refresh
	in the layer previews by adding calls to gimp_drawable_update()
	where appropriate. Removed redundant gimp_drawable_flush() calls.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12083 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-19  Pedro Gimeno  <pggimeno@wanadoo.es>
+
+	* plug-ins/common/compose.c (compose)
+	* plug-ins/common/decompose.c (decompose): fixed a lack of refresh
+	in the layer previews by adding calls to gimp_drawable_update()
+	where appropriate. Removed redundant gimp_drawable_flush() calls.
+
 2004-01-19  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpgradienteditor.[ch]: moved the first hint label
