2004-01-19  Sven Neumann  <sven@gimp.org>
	* app/file/file-utils.[ch]: removed file_utils_filename_to_utf8() ...

	* libgimpbase/gimputils.[ch]: ... and added it here as
	gimp_filename_to_utf8(). Added some docs that promise less than
	the current implementation holds so that we can change the
	implementation later.

	* app/*/*.c: use gimp_filename_to_utf8() where
	file_utils_filenames_to_utf8() has been used before.

	* libgimpbase/gimpbase.def: changed accordingly.

	* configure.in: reset GIMP_INTERFACE_AGE.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12084 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2004-01-19  Sven Neumann  <sven@gimp.org>
+
+	* app/file/file-utils.[ch]: removed file_utils_filename_to_utf8() ...
+
+	* libgimpbase/gimputils.[ch]: ... and added it here as
+	gimp_filename_to_utf8(). Added some docs that promise less than
+	the current implementation holds so that we can change the
+	implementation later.
+
+	* app/*/*.c: use gimp_filename_to_utf8() where
+	file_utils_filenames_to_utf8() has been used before.
+
+	* libgimpbase/gimpbase.def: changed accordingly.
+
+	* configure.in: reset GIMP_INTERFACE_AGE.
+
 2004-01-19  Pedro Gimeno  <pggimeno@wanadoo.es>
 
 	* plug-ins/common/compose.c (compose)
