2004-01-19  Sven Neumann  <sven@gimp.org>
	* app/*/*.c: include "libgimpbase/gimpbase.h" where needed; removed
	now unnecessary inclusions of "file/file-utils.h".


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12086 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-19  Sven Neumann  <sven@gimp.org>
 
+	* app/*/*.c: include "libgimpbase/gimpbase.h" where needed; removed
+	now unnecessary inclusions of "file/file-utils.h".
+
+2004-01-19  Sven Neumann  <sven@gimp.org>
+
 	* app/file/file-utils.[ch]: removed file_utils_filename_to_utf8() ...
 
 	* libgimpbase/gimputils.[ch]: ... and added it here as
