--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-19  Michael Natterer  <mitch@gimp.org>
+
+	* app/file/file-utils.h: removed inclusion of <stdio.h> and
+	"plug-in/plug-in-types.h".
+
 2004-01-19  Sven Neumann  <sven@gimp.org>
 
 	* app/*/*.c: include "libgimpbase/gimpbase.h" where needed; removed
