2004-01-19  Sven Neumann  <sven@gimp.org>
	* configure.in: bumped version number to 2.0pre3 (1.3.26),
	binary age 2, interface age 0.

	* libgimpbase/gimpsignal.h: removed unused definition of
	gimp_signal_syscallrestart().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12094 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-19  Sven Neumann  <sven@gimp.org>
+
+	* libgimpbase/libgimpbase-sections.txt
+	* libgimpbase/tmpl/gimpsignal.sgml: updated.
+
 2004-01-19  Michael Natterer  <mitch@gimp.org>
 
 	* app/app-sections.txt: updated.
