--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-19  Sven Neumann  <sven@gimp.org>
+
+	* configure.in: bumped version number to 2.0pre3 (1.3.26),
+	binary age 2, interface age 0.
+
+	* libgimpbase/gimpsignal.h: removed unused definition of
+	gimp_signal_syscallrestart().
+
 2004-01-19  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimptexttool.c (gimp_text_tool_create_layer): if there
