2004-01-19  Tor Lillqvist  <tml@iki.fi>
	* app/gui/about-dialog.c (decorate_text): Fix gccism.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12097 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-19  Tor Lillqvist  <tml@iki.fi>
+
+	* app/gui/about-dialog.c (decorate_text): Fix gccism.
+
 2004-01-19  Sven Neumann  <sven@gimp.org>
 
 	* configure.in: bumped version number to 2.0pre3 (1.3.26),
