2004-01-19  Pedro Gimeno  <pggimeno@wanadoo.es>
	* plug-ins/common/ccanalyze.c (analyze): Call gimp_drawable_detach()
	after gimp_drawable_get() to plug a leak.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12098 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-19  Pedro Gimeno  <pggimeno@wanadoo.es>
+
+	* plug-ins/common/ccanalyze.c (analyze): Call gimp_drawable_detach()
+	after gimp_drawable_get() to plug a leak.
+
 2004-01-19  Tor Lillqvist  <tml@iki.fi>
 
 	* app/gui/about-dialog.c (decorate_text): Fix gccism.
