--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-20  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation from
+	Raymond Ostertag <r.ostertag@caramail.com>.
+
 2003-12-16  Jan Morén  <jan.moren@lucs.lu.se>
 
         * sv.po: Updated Swedish translation.
