--- a/po-script-fu/fr.po
+++ b/po-script-fu/fr.po
@@ -1,16 +1,18 @@
 # French translation of gimp-script-fu.
-# Copyright (C) 2000-2003 Free Software Foundation, Inc.
+# Copyright (C) 2000-2004 Free Software Foundation, Inc.
+# This file is distributed under the same license as the gimp package.
+#
 # David Monniaux <monniaux@arbouse.ens.fr>, 2000.
 # maintainer: Christophe Merlet (RedFox) <redfox@redfoxcenter.org>, 2000-2003.
-# Raymond Ostertag <r.ostertag@caramail.com>, 2002-2003.
+# Raymond Ostertag <r.ostertag@caramail.com>, 2002-2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gimp-script-fu 1.3.22\n"
+"Project-Id-Version: gimp_script-fu 2.0pre3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-01-19 00:54+0100\n"
-"PO-Revision-Date: 2003-10-10 01:08+0200\n"
-"Last-Translator: ostertag raymond <r.ostertag@caramail.com>\n"
+"POT-Creation-Date: 2004-01-20 00:34+0100\n"
+"PO-Revision-Date: 2004-01-20 00:31+0100\n"
+"Last-Translator: Raymond Ostertag <r.ostertag@caramail.com>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -126,14 +128,14 @@ msgid "Image Types:"
 msgstr "Types d'images :"
 
 #: plug-ins/script-fu/script-fu-scripts.c:1992
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Error while executing\n"
 "%s\n"
 "%s"
 msgstr ""
-"Erreur Script-Fu durant l'exécution\n"
-"de %s\n"
+"Erreur durant l'exécution de\n"
+"%s\n"
 "%s"
 
 #: plug-ins/script-fu/script-fu-server.c:602
@@ -659,9 +661,8 @@ msgid "Width of Gaps"
 msgstr "Largeur des brèches"
 
 #: plug-ins/script-fu/scripts/asc2img.scm.h:1
-#, fuzzy
 msgid "<Image>/Script-Fu/Utils/_ASCII to Layer..."
-msgstr "<Image>/Script-Fu/Utilitaires/ASCII vers calque d'image..."
+msgstr "<Image>/Script-Fu/Utilitaires/_ASCII vers calque..."
 
 #: plug-ins/script-fu/scripts/asc2img.scm.h:2
 msgid "<Toolbox>/Xtns/Script-Fu/Utils/_ASCII to Image..."
@@ -852,9 +853,8 @@ msgid "Spots density Y"
 msgstr "Densité de points en Y"
 
 #: plug-ins/script-fu/scripts/burn-in-anim.scm.h:1
-#, fuzzy
 msgid "<Image>/Script-Fu/Animators/B_urn-In..."
-msgstr "<Image>/Script-Fu/Animateurs/_Mélange..."
+msgstr "<Image>/Script-Fu/Animateurs/_Enflammer..."
 
 #: plug-ins/script-fu/scripts/burn-in-anim.scm.h:2
 msgid "Add Glowing"
@@ -866,11 +866,13 @@ msgstr "Rougeoiement"
 
 #: plug-ins/script-fu/scripts/burn-in-anim.scm.h:4
 msgid "Burn-In: Need two layers in total!"
-msgstr "Burn In : à besoin de deux calques au total !"
+msgstr "Enflammer : à besoin de deux calques au total !"
 
 #: plug-ins/script-fu/scripts/burn-in-anim.scm.h:5
 msgid "Burn-in like effect on a fg (text) layer and a bg layer; V2.1"
 msgstr ""
+"Effet d'inscription par enflammement d'un calque texte d'avant-plan sur un "
+"calque de fond; V2.1"
 
 #: plug-ins/script-fu/scripts/burn-in-anim.scm.h:6
 msgid "Corona Width"
@@ -1330,51 +1332,43 @@ msgstr "Échelle en Y"
 
 #: plug-ins/script-fu/scripts/font-map.scm.h:1
 msgid "<Toolbox>/Xtns/Script-Fu/Utils/_Font Map..."
-msgstr "<Toolbox>/Exts/Script-Fu/Utilitaires/Carte de _police..."
+msgstr "<Toolbox>/Exts/Script-Fu/Utilitaires/Liste de _polices..."
 
 #: plug-ins/script-fu/scripts/font-map.scm.h:2
-#, fuzzy
 msgid "Active Colors"
-msgstr "Couleur de contour"
+msgstr "Activer les couleurs"
 
 #: plug-ins/script-fu/scripts/font-map.scm.h:3
 msgid "Black on White"
-msgstr ""
+msgstr "Noir et blanc"
 
 #: plug-ins/script-fu/scripts/font-map.scm.h:4
-#, fuzzy
 msgid "Font _Size (pixels)"
-msgstr "Taille de la police (pixels)"
+msgstr "_Taille de la police (pixels)"
 
 #: plug-ins/script-fu/scripts/font-map.scm.h:5
-#, fuzzy
 msgid "Use Font _Name as Text"
-msgstr "Utiliser le nom de police comme texte"
+msgstr "Utiliser le n_om de la police comme texte"
 
 #: plug-ins/script-fu/scripts/font-map.scm.h:6
-#, fuzzy
 msgid "_Border (pixels)"
-msgstr "Bordure (pixels)"
+msgstr "_Bordure (pixels)"
 
 #: plug-ins/script-fu/scripts/font-map.scm.h:7
-#, fuzzy
 msgid "_Color Scheme"
-msgstr "Couleur 3"
+msgstr "_Schéma de couleur"
 
 #: plug-ins/script-fu/scripts/font-map.scm.h:8
-#, fuzzy
 msgid "_Filter (regexp)"
-msgstr "Filtre (regexp)"
+msgstr "_Filtre (regexp)"
 
 #: plug-ins/script-fu/scripts/font-map.scm.h:9
-#, fuzzy
 msgid "_Labels"
-msgstr "Labels"
+msgstr "_Étiquettes"
 
 #: plug-ins/script-fu/scripts/font-map.scm.h:10
-#, fuzzy
 msgid "_Text"
-msgstr "Texte"
+msgstr "Te_xte"
 
 #: plug-ins/script-fu/scripts/frosty-logo.scm.h:1
 msgid "<Image>/Script-Fu/Alpha to Logo/_Frosty..."
@@ -2041,9 +2035,8 @@ msgid "Turn from Left to Right"
 msgstr "Tourne de gauche à droite"
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:1
-#, fuzzy
 msgid "<Image>/Script-Fu/Render/_Spyrogimp..."
-msgstr "<Image>/Script-Fu/Rendu/_Grille..."
+msgstr "<Image>/Script-Fu/Rendu/_Spyrogimp..."
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:2
 msgid "Airbrush"
@@ -2066,6 +2059,8 @@ msgid ""
 "Draws Spirographs, Epitrochoids and Lissajous Curves. More info at http://"
 "netword.com/*spyrogimp"
 msgstr ""
+"Dessine des courbes épitrochoïdes et Lissajous avec un spyrographe. Plus "
+"d'info à http://netword.com/*spyrogimp"
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:8
 msgid "Epitrochoid"
@@ -2077,11 +2072,11 @@ msgstr "Cadre"
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:11
 msgid "Gradient: Loop Sawtooth"
-msgstr "Dégradé : rebouclage en dents de scie"
+msgstr "Dégradé : rebouclage en dents de scie"
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:12
 msgid "Gradient: Loop Triangle"
-msgstr "Dégradé : rebouclage en triangle"
+msgstr "Dégradé : rebouclage en triangle"
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:13
 msgid "Hexagon"
@@ -2117,19 +2112,19 @@ msgstr "Pentagone"
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:21
 msgid "Polygon: 10 sides"
-msgstr "Polygone : 10 cotés"
+msgstr "Polygone : 10 cotés"
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:22
 msgid "Polygon: 7 sides"
-msgstr "Polygone : 7 cotés"
+msgstr "Polygone : 7 cotés"
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:23
 msgid "Polygon: 8 sides"
-msgstr "Polygone : 8 cotés"
+msgstr "Polygone : 8 cotés"
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:24
 msgid "Polygon: 9 sides"
-msgstr "polygone : 9 cotés"
+msgstr "polygone : 9 cotés"
 
 #: plug-ins/script-fu/scripts/spyrogimp.scm.h:25
 msgid "Shape"
@@ -2326,7 +2321,7 @@ msgstr "Couleur de premier plan"
 
 #: plug-ins/script-fu/scripts/unsharp-mask.scm.h:1
 msgid "<Image>/Script-Fu/Alchemy/_Unsharp Mask..."
-msgstr "<Image>/Script-Fu/Alchimie/_Masques de contraste..."
+msgstr "<Image>/Script-Fu/Alchimie/_Masque flou..."
 
 #: plug-ins/script-fu/scripts/unsharp-mask.scm.h:2
 msgid "Mask Opacity"
@@ -2494,7 +2489,7 @@ msgstr "Décalage Y accentuation"
 #~ "        A foreground text layer with transparency\n"
 #~ "        and a background layer."
 #~ msgstr ""
-#~ "Brûler : a besoin de deux calques au total !\n"
+#~ "Brûler : a besoin de deux calques au total !\n"
 #~ "        Un texte d'avant-plan dans un calque avec trabsprence\n"
 #~ "        et un calque d'arrière-plan."
 
