--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-20  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation from
+	Raymond Ostertag <r.ostertag@caramail.com>.
+
 2004-01-19  Pablo G. del Campo  <pablodc@bigfoot.com>
 
 	* es.po: Updated Spanish translation.
